Fix scrollbars showing when not overflowing

--- a/_sass/markdown_content.sass
+++ b/_sass/markdown_content.sass
@@ -10,7 +10,7 @@
   pre
     padding: 12px
     border-radius: 4px
-    overflow-x: scroll
+    overflow-x: auto
 
     code
       background-color: inherit
@@ -18,7 +18,7 @@
   .table-wrapper
     width: 100%
     max-height: 50em
-    overflow: scroll
+    overflow: auto
 
   table
     border-collapse: collapse
